...
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@+id/eTUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tUsuario"
        app:layout_constraintVertical_bias="0.045" />

    <Switch
        android:id="@+id/swModo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="Modo Noche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eTUsuario"
        app:layout_constraintTop_toBottomOf="@+id/eTUsuario"
        app:layout_constraintVertical_bias="0.072" />

    <Switch
        android:id="@+id/sInfoDino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="Informacion del dinosaurio simplificada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/swModo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <Button
        android:id="@+id/bCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Cerrar Sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bContactar"
        app:layout_constraintTop_toBottomOf="@+id/bContactar"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/bAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ayuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eTUsuario"
        app:layout_constraintTop_toBottomOf="@+id/swModo"
        app:layout_constraintVertical_bias="0.255" />
...
